--- a/src/less/bootstrap-datetimepicker.less
+++ b/src/less/bootstrap-datetimepicker.less
@@ -178,3 +178,18 @@
         right: 7px;
     }
 }
+
+.bootstrap-datetimepicker-widget.top-oriented {
+    &:before {
+        content: '';
+        border-top: 7px solid #ccc;
+        border-top-color: rgba(0,0,0,.2);
+        border-bottom: none;
+        bottom: -7px;
+    }
+    &:after {
+        border-top: 6px solid @white;
+        border-bottom: none;
+        bottom: -6px;
+    }
+}
